[gd_scene load_steps=5 format=3 uid="uid://dqj82fssvs5nb"]

[ext_resource type="Script" uid="uid://g3th101thvxv" path="res://scenes/hud/hud.gd" id="1_48c2t"]
[ext_resource type="Texture2D" uid="uid://cnhr3q3qc0h2i" path="res://graphics/hud/left_arrow.png" id="2_c45xl"]
[ext_resource type="Texture2D" uid="uid://rukj614b5jax" path="res://graphics/hud/right_arrow.png" id="3_0bx4p"]
[ext_resource type="Texture2D" uid="uid://cccxss1gq5j18" path="res://graphics/hud/fire_button.png" id="4_0bx4p"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_48c2t")
metadata/_edit_group_ = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 75
text = "Start Game"

[node name="MoveLeftButton" type="Button" parent="."]
anchors_preset = -1
offset_left = 1496.0
offset_top = 928.0
offset_right = 1880.0
offset_bottom = 1312.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("2_c45xl")

[node name="MoveRightButton" type="Button" parent="."]
anchors_preset = -1
offset_left = 1760.0
offset_top = 928.0
offset_right = 2144.0
offset_bottom = 1312.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("3_0bx4p")

[node name="FireLaser" type="Button" parent="."]
anchors_preset = -1
offset_left = 56.0
offset_top = 920.0
offset_right = 440.0
offset_bottom = 1304.0
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 0
icon = ExtResource("4_0bx4p")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MoveLeftButton" to="." method="_on_move_left_button_pressed"]
[connection signal="pressed" from="MoveRightButton" to="." method="_on_move_right_button_pressed"]
[connection signal="pressed" from="FireLaser" to="." method="_on_fire_laser_pressed"]
